ダンジョンにクリア目標の概念を追加